--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Main Blog Page</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/form.css">
+    <a href="./myPages/blog.html"></a>
 </head>
 
 <body>
@@ -27,7 +28,6 @@
     </div>
     
 
- <!-- right column -->
  <div class="columns">
     <div id="rightColumnContent">
         <div class="formInfo">
