--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Main Blog Page</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/form.css">
-    <a href="./myPages/blog.html"></a>
+    <a href="./mypages/blog.html"></a>
 </head>
 
 <body>
