--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div id="msg"></div>
 
-                <button type="submit" id="submitHere" value="Be Inspired"><a href="./my pages/blog.html"><strong>Submit</strong></a></button>
+                <button type="submit" id="submitHere" value="Be Inspired"><a href="mypages/blog.html"><strong>Submit</strong></a></button>
             </form>
             
             </div>
