--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Main Blog Page</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/form.css">
-    <a href="./mypages/blog.html"></a>
+    <a href="mypages/blog.html"></a>
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./myPages/blog.html"></a></li>
+            <a href="myPages/blog.html"></a></li>
             <button id="modeToggle" class="dark-mode light-mode">☀️</button>
         </nav>
     </header>
