--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <h1>My Blogs</h1>
-            <button id="backButton"><a href="../index.html">Back</a></button>
+            <button id="backButton"><a href="./index.html">Back</a></button>
             <button id="modeToggle" class="dark-mode light-mode">☀️</button>
         </nav>
 </header>
@@ -29,8 +29,8 @@
         </div>
         <p id="withLove"> Made with ❤️ by Rhianna <br> &copy; 2024 All rights reserved</p>
 
-        <script src="../assets/js/blog.js"></script>
-        <script src="../assets/js/logic.js"></script>
+        <script src="./assets/js/blog.js"></script>
+        <script src="./assets/js/logic.js"></script>
 
       </footer>
 </body>
